Use a standard base64 encoder.