@@ -10,13 +10,12 @@ package org.fakebelieve.henplus.plugins.login;
  */
 import java.io.IOException;
 import java.security.GeneralSecurityException;
+import java.util.Base64;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.PBEParameterSpec;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class PasswordEncryptionUtil {
 
@@ -39,8 +38,7 @@ public class PasswordEncryptionUtil {
     }
 
     private static String base64Encode(byte[] bytes) {
-        // NB: This class is internal, and you probably should use another impl
-        return new BASE64Encoder().encode(bytes);
+        return java.util.Base64.getEncoder().encodeToString(bytes);
     }
 
     public String decrypt(String property) throws GeneralSecurityException, IOException {
@@ -51,9 +49,8 @@ public class PasswordEncryptionUtil {
         return new String(pbeCipher.doFinal(base64Decode(property)));
     }
 
-    private static byte[] base64Decode(String property) throws IOException {
-        // NB: This class is internal, and you probably should use another impl
-        return new BASE64Decoder().decodeBuffer(property);
+    private static byte[] base64Decode(String property) {
+        return Base64.getDecoder().decode(property);
     }
 
 }
